--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
-    "paper-card": "PolymerElements/paper-card#^2.0.0"
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
