--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "paper-card": "PolymerElements/paper-card#^2.0.0",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^2.0.0"
+    "paper-toolbar": "PolymerElements/paper-toolbar#^2.0.0",
+    "paper-menu": "PolymerElements/paper-menu#^1.3.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
