--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,14 @@
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "paper-card": "PolymerElements/paper-card#^2.0.0",
     "paper-menu": "PolymerElements/paper-menu#^1.3.0",
-    "paper-item": "PolymerElements/paper-item#^2.0.0"
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
+    "iron-input": "PolymerElements/iron-input#^2.0.1",
+    "iron-list": "PolymerElements/iron-list#^2.0.9",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
+    "drop-menu": "acordeonl/drop-menu#^2.0.4",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
