--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "polymer-starter-kit",
   "license": "BSD-3-Clause",
   "devDependencies": {
+    "qrcode": "^0.8.2",
+    "ethereum-blockies": "git+https://github.com/MyEtherWallet/blockies.git",
+    "ethereumjs-tx": "^1.3.3",
+    "ethereumjs-util": "^5.1.2",
+    "ethereumjs-wallet": "^0.6.0",
+    "bignumber.js": "^4.0.2",
+    "ethereumjs-abi": "^0.6.4",
+    "wallet-address-validator": "^0.1.0",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.0",
     "eslint-plugin-html": "^2.0.0"
