--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "paper-card": "PolymerElements/paper-card#^2.0.0",
     "paper-menu": "PolymerElements/paper-menu#^1.3.0",
     "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "iron-checked-element-behavior": "PolymerElements/iron-checked-element-behavior#^2.0.0",
     "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
     "iron-input": "PolymerElements/iron-input#^2.0.1",
     "iron-list": "PolymerElements/iron-list#^2.0.9",
