--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,11 @@
     "paper-listbox": "PolymerElements/paper-listbox#^2.0.0"
   },
   "resolutions": {
-    "polymer": "^2.0.0"
+    "polymer": "^2.0.0",
+    "iron-flex-layout": "^2.0.0",
+    "webcomponentsjs": "^v1.0.2",
+    "iron-selector": "^2.0.0",
+    "paper-styles": "^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
