--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Loopring/looper.git"
   },
-  "license": "BSD-3-Clause",
+  "license": "Apache-2",
   "devDependencies": {
     "qrcode": "^0.8.2",
     "ethereum-blockies": "git+https://github.com/MyEtherWallet/blockies.git",
