--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "paper-input": "PolymerElements/paper-input#^2.0.2",
     "iron-icon": "PolymerElements/iron-icon#^2.0.1",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
-    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.0"
+    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.0",
+    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0",
