--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.0",
     "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
     "highcharts": "highcharts-release#^6.0.1",
-    "highstock": "highstock-release#^6.0.1"
+    "highstock": "highstock-release#^6.0.1",
+    "marked-element": "PolymerElements/marked-element#^2.3.0"
   },
   "resolutions": {
     "polymer": "^2.0.0",
