--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Looper",
+  "name": "looper",
   "authors": [
     "The Loopring Team"
   ],
@@ -42,7 +42,8 @@
     "vaadin-charts": "vaadin/vaadin-charts#^5.0.0",
     "vaadin-checkbox": "vaadin/vaadin-checkbox#^1.0.0",
     "vaadin-button": "vaadin/vaadin-button#^1.0.4",
-    "vaadin-progress-bar": "vaadin/vaadin-progress-bar#^1.0.0-alpha4"
+    "vaadin-progress-bar": "vaadin/vaadin-progress-bar#^1.0.0-alpha4",
+    "vaadin-icons": "vaadin/vaadin-icons#^4.1.2"
   },
   "resolutions": {
     "polymer": "^2.0.0",
