--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Looper",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A Loopring Web Wallet",
   "homepage": "https://loopring.org/",
   "bugs": "https://github.com/Loopring/looper/issues",
@@ -10,17 +10,9 @@
   },
   "license": "Apache-2",
   "devDependencies": {
-    "bignumber.js": "^4.0.2",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.0",
-    "eslint-plugin-html": "^2.0.0",
-    "ethereum-blockies": "git+https://github.com/MyEtherWallet/blockies.git",
-    "ethereumjs-abi": "^0.6.4",
-    "ethereumjs-tx": "^1.3.3",
-    "ethereumjs-util": "^5.1.2",
-    "ethereumjs-wallet": "^0.6.0",
-    "qrcode": "^0.8.2",
-    "wallet-address-validator": "^0.1.0"
+    "eslint-plugin-html": "^2.0.0"
   },
   "scripts": {
     "lint": "npm run lint:javascript && polymer lint",
