--- a/bower.json
+++ b/bower.json
@@ -50,7 +50,8 @@
     "scary-cookie-consent": "Scarygami/scary-cookie-consent#^2.0.0",
     "paper-progress": "PolymerElements/paper-progress#^2.0.1",
     "paper-tooltip": "PolymerElements/paper-tooltip#^2.0.1",
-    "paper-toast": "PolymerElements/paper-toast#^2.0.0"
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "iron-label": "PolymerElements/iron-label#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0",
