--- a/bower.json
+++ b/bower.json
@@ -1,68 +1,71 @@
 {
-  "name": "looper",
-  "authors": [
-    "The Loopring Team"
-  ],
-  "license": "https://polymer.github.io/LICENSE.txt",
-  "dependencies": {
-    "app-layout": "PolymerElements/app-layout#^2.0.0",
-    "app-route": "PolymerElements/app-route#^2.0.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
-    "iron-media-query": "PolymerElements/iron-media-query#^2.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
-    "iron-selector": "PolymerElements/iron-selector#^2.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
-    "polymer": "Polymer/polymer#^2.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "iron-icons": "PolymerElements/iron-icons#^2.0.1",
-    "paper-card": "PolymerElements/paper-card#^2.0.0",
-    "paper-menu": "PolymerElements/paper-menu#^1.3.0",
-    "paper-item": "PolymerElements/paper-item#^2.0.0",
-    "iron-checked-element-behavior": "PolymerElements/iron-checked-element-behavior#^2.0.0",
-    "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
-    "iron-input": "PolymerElements/iron-input#^2.0.1",
-    "iron-list": "PolymerElements/iron-list#^2.0.9",
-    "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
-    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
-    "paper-input": "PolymerElements/paper-input#^2.0.2",
-    "iron-icon": "PolymerElements/iron-icon#^2.0.1",
-    "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
-    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.0",
-    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
-    "marked-element": "PolymerElements/marked-element#^2.3.0",
-    "vaadin-material-theme": "vaadin/vaadin-material-theme#^0.3.0",
-    "vaadin-grid": "vaadin/vaadin-grid#^3.0.2",
-    "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.5",
-    "vaadin-combo-box": "vaadin/vaadin-combo-box#^3.0.0",
-    "vaadin-radio-button": "vaadin/vaadin-radio-button#^1.0.0-alpha3",
-    "vaadin-text-field": "vaadin/vaadin-text-field#^1.1.0",
-    "vaadin-checkbox": "vaadin/vaadin-checkbox#^1.0.0",
-    "vaadin-button": "vaadin/vaadin-button#^1.0.4",
-    "vaadin-progress-bar": "vaadin/vaadin-progress-bar#^1.0.0-alpha4",
-    "highstock": "highstock-release#^6.0.1",
-    "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
-    "vaadin-valo-theme": "vaadin/vaadin-valo-theme#^0.3.2",
-    "scary-cookie": "Scarygami/scary-cookie#^2.0.0",
-    "scary-cookie-consent": "Scarygami/scary-cookie-consent#^2.0.0",
-    "paper-progress": "PolymerElements/paper-progress#^2.0.1",
-    "paper-tooltip": "PolymerElements/paper-tooltip#^2.0.1",
-    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
-    "iron-label": "PolymerElements/iron-label#^2.0.0"
-  },
-  "resolutions": {
-    "polymer": "^2.0.0",
-    "iron-flex-layout": "^2.0.0",
-    "webcomponentsjs": "^v1.0.2",
-    "iron-selector": "^2.0.0",
-    "paper-styles": "^2.0.0",
-    "iron-resizable-behavior": "^v2.0.0",
-    "iron-a11y-keys-behavior": "^v2.0.0"
-  },
-  "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#^6.0.0"
-  },
-  "private": true
+    "name": "looper",
+    "authors": [
+        "The Loopring Team"
+    ],
+    "license": "https://polymer.github.io/LICENSE.txt",
+    "dependencies":
+    {
+        "app-layout": "PolymerElements/app-layout#^2.0.0",
+        "app-route": "PolymerElements/app-route#^2.0.0",
+        "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
+        "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
+        "iron-media-query": "PolymerElements/iron-media-query#^2.0.0",
+        "iron-pages": "PolymerElements/iron-pages#^2.0.0",
+        "iron-selector": "PolymerElements/iron-selector#^2.0.0",
+        "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
+        "polymer": "Polymer/polymer#^2.0.0",
+        "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+        "paper-button": "PolymerElements/paper-button#^2.0.0",
+        "iron-icons": "PolymerElements/iron-icons#^2.0.1",
+        "paper-card": "PolymerElements/paper-card#^2.0.0",
+        "paper-menu": "PolymerElements/paper-menu#^1.3.0",
+        "paper-item": "PolymerElements/paper-item#^2.0.0",
+        "iron-checked-element-behavior": "PolymerElements/iron-checked-element-behavior#^2.0.0",
+        "iron-dropdown": "PolymerElements/iron-dropdown#^2.0.0",
+        "iron-input": "PolymerElements/iron-input#^2.0.1",
+        "iron-list": "PolymerElements/iron-list#^2.0.9",
+        "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
+        "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
+        "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+        "paper-input": "PolymerElements/paper-input#^2.0.2",
+        "iron-icon": "PolymerElements/iron-icon#^2.0.1",
+        "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
+        "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.0",
+        "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
+        "marked-element": "PolymerElements/marked-element#^2.3.0",
+        "vaadin-material-theme": "vaadin/vaadin-material-theme#^0.3.0",
+        "vaadin-grid": "vaadin/vaadin-grid#^3.0.2",
+        "vaadin-date-picker": "vaadin/vaadin-date-picker#^2.0.5",
+        "vaadin-combo-box": "vaadin/vaadin-combo-box#^3.0.0",
+        "vaadin-radio-button": "vaadin/vaadin-radio-button#^1.0.0-alpha3",
+        "vaadin-text-field": "vaadin/vaadin-text-field#^1.1.0",
+        "vaadin-checkbox": "vaadin/vaadin-checkbox#^1.0.0",
+        "vaadin-button": "vaadin/vaadin-button#^1.0.4",
+        "vaadin-progress-bar": "vaadin/vaadin-progress-bar#^1.0.0-alpha4",
+        "highstock": "highstock-release#^6.0.1",
+        "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
+        "vaadin-valo-theme": "vaadin/vaadin-valo-theme#^0.3.2",
+        "scary-cookie": "Scarygami/scary-cookie#^2.0.0",
+        "scary-cookie-consent": "Scarygami/scary-cookie-consent#^2.0.0",
+        "paper-progress": "PolymerElements/paper-progress#^2.0.1",
+        "paper-tooltip": "PolymerElements/paper-tooltip#^2.0.1",
+        "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+        "iron-label": "PolymerElements/iron-label#^2.0.0"
+    },
+    "resolutions":
+    {
+        "polymer": "^2.0.0",
+        "iron-flex-layout": "^2.0.0",
+        "webcomponentsjs": "^v1.0.2",
+        "iron-selector": "^2.0.0",
+        "paper-styles": "^2.0.0",
+        "iron-resizable-behavior": "^v2.0.0",
+        "iron-a11y-keys-behavior": "^v2.0.0"
+    },
+    "devDependencies":
+    {
+        "web-component-tester": "Polymer/web-component-tester#^6.0.0"
+    },
+    "private": true
 }
