--- a/bower.json
+++ b/bower.json
@@ -53,7 +53,8 @@
     "paper-toast": "PolymerElements/paper-toast#^2.0.0",
     "web3": "^0.19.0",
     "ethereum.js": "^0.0.15",
-    "wallet-address-validator": "crypto-wallet-address-validator#^0.2.1"
+    "wallet-address-validator": "crypto-wallet-address-validator#^0.2.1",
+    "browser-builds": "ethereumjs/browser-builds"
   },
   "resolutions": {
     "polymer": "^2.0.0",
