--- a/libs/src/package.json
+++ b/libs/src/package.json
@@ -18,7 +18,9 @@
     "idna-uts46": "^1.1.0",
     "ethereumjs-util": "^5.1.2",
     "ethereumjs-wallet": "^0.6.0",
-    "wallet-address-validator": "^0.1.0"
+    "wallet-address-validator": "^0.1.0",
+    "scryptsy": "^2.0.0",
+    "uuid": "^3.1.0"
   }
 
 }
