--- a/bower.json
+++ b/bower.json
@@ -51,8 +51,7 @@
     "paper-tooltip": "PolymerElements/paper-tooltip#^2.0.1",
     "paper-toast": "PolymerElements/paper-toast#^2.0.0",
     "iron-label": "PolymerElements/iron-label#^2.0.0",
-    "paper-fab": "PolymerElements/paper-fab#^2.0.0",
-    "granite-file-reader": "LostInBrittany/granite-file-reader#^1.3.0"
+    "paper-fab": "PolymerElements/paper-fab#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0",
